@@ -4,7 +4,7 @@
 
   <!ENTITY dhfirstname "<firstname>Petr</firstname>">
   <!ENTITY dhsurname   "<surname>Kubanek</surname>">
-  <!ENTITY dhdate      "<date>2010-12-14</date>">
+  <!ENTITY dhdate      "<date>2012-01-06</date>">
   <!ENTITY dhsection   "<manvolnum>1</manvolnum>">
   <!ENTITY dhemail     "<email>petr@kubanek.net</email>">
   <!ENTITY dhusername  "Petr Kubanek">
@@ -35,7 +35,7 @@
       <holder>&dhusername;</holder>
     </copyright>
     <copyright>
-      <year>2011</year>
+      <year>2011,2012</year>
       <holder>&fzu;</holder>
     </copyright>
     &legal;
@@ -84,6 +84,9 @@
       </arg>
       <arg choice="opt">
         <arg choice="plain"><option>--program <replaceable>program name</replaceable></option></arg>
+      </arg>
+      <arg choice="opt">
+        <arg choicd="plain"><option>--proper-motion <replaceable>proper motion</replaceable></option></arg>
       </arg>
       <arg choice="opt">
         <arg choice="plain"><option>--delete-targets</option></arg>
@@ -236,6 +239,15 @@
         <listitem>
           <para>
 	    Set target(s) program name.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><option>--proper-motion <replaceable class="parameter">proper motion</replaceable></option></term>
+        <listitem>
+          <para>
+	    Set target(s) proper motion. Report an error if target(s) of wrong
+	    type (e.g. not constant - GRBs,..) are provided in target list.
 	  </para>
 	</listitem>
       </varlistentry>
