@@ -4,7 +4,7 @@
 
   <!ENTITY dhfirstname "<firstname>Petr</firstname>">
   <!ENTITY dhsurname   "<surname>Kubanek</surname>">
-  <!ENTITY dhdate      "<date>2011-01-26</date>">
+  <!ENTITY dhdate      "<date>2012-01-13</date>">
   <!ENTITY dhsection   "<manvolnum>5</manvolnum>">
   <!ENTITY dhemail     "<email>petr@kubanek.net</email>">
   <!ENTITY dhusername  "Petr Kubanek">
@@ -40,6 +40,7 @@
       <year>2007</year>
       <year>2009</year>
       <year>2010</year>
+      <year>2012</year>
       <holder>&dhusername;</holder>
     </copyright>
     <copyright>
@@ -852,6 +853,21 @@ double fwhm "[pixels] current FWHM, as meassured by foo bar script" 6.32
 	<listitem><para>
 	  Creates or update device boolean value with ON/OFF type. Similar to
 	  <emphasis>bool</emphasis> command, described above.
+	</para></listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><option>double_array {variable name} {variable description} {values..}</option></term>
+	<listitem><para>
+	  Creates or update double array variable. If the array variable
+	  exists, its values are overwritten by specified values. Values to an
+	  existing array can be added with
+	  <emphasis>double_array_add</emphasis> command.
+	</para></listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><option>double_array_add {variable name} {values..}</option></term>
+	<listitem><para>
+	  Add new values to an existing double array variable.
 	</para></listitem>
       </varlistentry>
       <varlistentry>
