@@ -1,3 +1,6 @@
+2012-01-13
+ * array values (double_array, double_array_add) from script code
+
 2012-01-08
  * added records_integer value
 
